# chi-edge-workers

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTORS.md  README.md  balena.yml  docker-compose.yml  pyproject.toml  using_cuda.md
.github/workflows/: build.yml  jetson-base.yml  pr.yml  release.yml
coordinator/: Dockerfile.template  coordinator.py  entrypoint.sh  pyproject.toml  requirements.txt
coordinator/chi-edge-coordinator/: README.md  pyproject.toml
coordinator/chi-edge-coordinator/src/chi_edge_coordinator/: coordinator.py
coordinator/chi-edge-coordinator/src/chi_edge_coordinator/clients/: balena.py  openstack.py  wgconfig.py
coordinator/chi-edge-coordinator/tests/unit/: fakes.py  test_balenaclient.py  test_coordinator.py  test_openstackclients.py  test_wgconfig.py
coordinator/chi_edge_coordinator/: coordinator.py
coordinator/chi_edge_coordinator/tests/unit/: test_coordinator.py
coordinator/tests/unit/: test_update_lock.py
deploy_tools/: pyproject.toml
deploy_tools/chi_edge_workers/: push_with_env.sh
fleet/coordinator/: Dockerfile.template  entrypoint.sh
fleet/coordinator/chi-edge-coordinator/src/chi_edge_coordinator/: update_lock.py  utils.py
fleet/coordinator/chi-edge-coordinator/tests/unit/: fakes.py  test_balenaclient.py
fleet/k3s/: Dockerfile.jetson-nano  Dockerfile.jetson-orin-nano-devkit-nvme  Dockerfile.jetson-xavier-nx-devkit-emmc  start.sh
fleet/wireguard/: Dockerfile.template  start.sh
images/jetson-base/: Dockerfile  README.md  build.sh  docker-bake.hcl  jetpack4.Dockerfile  jetpack5.Dockerfile  jetpack6.Dockerfile
images/l4t-cuda/: Dockerfile  README.md  docker-bake.hcl
k3s/: Dockerfile.jetson-nano  Dockerfile.jetson-orin  Dockerfile.jetson-orin-nano-devkit-nvme  Dockerfile.jetson-xavier-nx-devkit-emmc  Dockerfile.template  Dockerfile.xavier-nx-devkit-emmc  balena.service  config.toml.tmpl  contract.yml  entrypoint.sh  install-k3s.sh  install_tegra.sh  k3s.service  nvidia-container-runtime.toml  start.sh
k3s-rpi3-64/: Dockerfile.template  contract.yml  start.sh
k3s-rpi4-64/: Dockerfile.template
k3s-rpi5/: Dockerfile.template  contract.yml  start.sh
k3s-rpicm4/: Dockerfile.template  contract.yml  start.sh
k3s-t186/: Dockerfile.xavier-nx-devkit-emmc  contract.yml  install_tegra.sh  start.sh
k3s-t210/: Dockerfile.jetson-nano  contract.yml
nvidia_reference/: gpu-support.md  nvidia-device-plugin.yml  test-gpu.yaml
scripts/: canary.py  fleet_summary.py
wireguard/: Dockerfile.template  entrypoint.sh  install-wireguard.sh  start.sh
wireguard/ipip/src/: Makefile
