[project]
name = "chi-edge-workers"
version = "0.1.0"
description = ""
authors = [{ name = "Chameleon Team", email = "contact@chameleoncloud.org" }]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "balena-sdk>=11.4.0,<12",
    "click>=8.1.3,<9",
    "rich>=12.4.1,<13",
]

[project.scripts]
canary = "scripts.canary:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.7",
]


[tool.uv.build-backend]
module-name = ["scripts"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
