[project]
name = "chi-edge-workers"
version = "0.1.0"
description = ""
authors = [{ name = "Chameleon Team", email = "contact@chameleoncloud.org" }]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "balena-sdk",
    "click",
    "rich",
]

[project.scripts]
canary = "scripts.canary:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]


[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts"]
