[tool.poetry]
name = "chi-edge-coordinator"
version = "0.1.0"
description = ""
authors = ["Michael Sherman <shermanm@uchicago.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
keystoneauth1 = "^5.1.2"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
