[project]
name = "chi-edge-deploy-tools"
version = "0.1.0"
description = ""
authors = [{ name = "Chameleon Team", email = "contact@chameleoncloud.org" }]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "balena-sdk",
    "click",
    "rich",
]

[project.scripts]
canary = "chi_edge_workers.canary:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
